[tool.poetry]
name = "hexlet-code"
packages = [
    { include = "brain_games" },
]
version = "0.1.1"
description = ""
authors = ["Iuliia Stetskaia <iuliia_stetskaia@epam.com>"]

[tool.poetry.scripts]
brain-games="brain_games.scripts.brain_games:main"
brain-even="brain_games.scripts.brain_even:main"

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
