[tool.poetry]
name = "hexlet-code"
packages = [
    { include = "brain_games" },
]
version = "0.1.1"
description = "Five console games for pumping the brain"
authors = ["Iuliia Stetskaia <iuliia_stetskaia@epam.com>"]
repository = "https://github.com/juliastetskaya/python-project-lvl1"
classifiers = [
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3.9",
    "License :: Free For Home Use"
]

[tool.poetry.scripts]
brain-games="brain_games.scripts.brain_games:main"
brain-even="brain_games.scripts.brain_even:main"
brain-calc="brain_games.scripts.brain_calc:main"
brain-gcd="brain_games.scripts.brain_gcd:main"
brain-progression="brain_games.scripts.brain_progression:main"
brain-prime="brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
